--- a/src/css/components/cube.scss
+++ b/src/css/components/cube.scss
@@ -1,8 +1,11 @@
 #cube {
-    padding: 104px 0px 0px 30px;
+    padding: 104px 0px 0px 0px;
 
     .cube__inform {
-        margin-top: 110px;
+        padding: 82px 0px 0px 30px;
+        margin-top: 28px;
+        background: url("../../assets/img/bg-polygons.png");
+        background-repeat: no-repeat;
         .cube__title {
             font-family: 'Montserrat';
             font-style: normal;
