--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -1,20 +1,26 @@
 #header {
-    height: 70px;
-    padding: 21px 0px 21px 0px;
-    .menu {
+    padding: 21px 0px 20px 0px;
+    .menu,.mobail-menu__inner {
         a {
             text-decoration: none;
             font-family: 'Lato';
             font-weight: 500;
+
+
+            
             font-size: 14px;
             line-height: 17px;
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: #282C37;
         }
+        .menu__link--active {
+            font-weight: 700;
+        }
 
         .social-media {
-            width:110px;
+            width: 110px;
+
             a {
                 transition: 0.2s;
             }
@@ -31,59 +37,111 @@
                 fill: #47CF34;
             }
         }
-        .burger {
-            position: relative;
-            display: none;
-            z-index: 1000;
-            width: 36px;
-            height: 36px;
-            border-radius: 20px;
-            background-color: #FFFFFF;
-            border: 1px solid #FFFFFF;
-        }
-        
-        .burger:hover {
+    }
+
+    .burger {
+        position: relative;
+        z-index: 50;
+        width: 36px;
+        height: 36px;
+        border-radius: 20px;
+        background-color: white;
+        border: 0px;
+
+        &:hover {
             background: #E5E5E5;
         }
-        .burger:focus{
-            background: #FFFFFF;
-            outline: 1px solid #CDA274;
-        }
-        .burger span {
-            width: 16px;
-            height: 2px;
-            background-color: #222222;
+
+        span {
+            width: 24px;
+            height: 2.5px;
+            margin-left: 6px;
+            margin-top: 0px;
             position: absolute;
+            background-color: #282C37;
+            left: 0%;
+            top: 0%;
             z-index: 20;
-            top: 30%;
-            left: 27%;
             transition: all ease 0.5s;
         }
-        .burger span:nth-of-type(1) {
-            top: 47%;
+    }
+
+    .burger span:nth-of-type(1) {
+        top: 50%;
+    }
+
+    .burger span:nth-of-type(2) {
+        top: calc(50% - 8px);
+    }
+
+    .burger span:nth-of-type(3) {
+        top: calc(50% + 8px);
+    }
+
+    .burger.active span:first-of-type {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+
+    .burger.active span:nth-of-type(2) {
+        top: 50%;
+        transform: rotate(405deg);
+    }
+
+    .burger.active span:nth-of-type(3) {
+        top: 50%;
+        transform: rotate(-405deg);
+    }
+
+    .mobail-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 51;
+        width: 100%;
+        height: 100%;
+        transform: translate(300%);
+        background-color: #FFFFFF;
+        transition: all ease 0.5s;
+        .mobail-menu__close{
+            margin-top: 24px;
+            width: 24px;
         }
-        
-        .burger span:nth-of-type(2) {
-            top: calc(47% - 6px);
+        .mobail-menu__inner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: absolute;               
+            top: 50%;   
+            left: 0px;
+            right: 0px;                      
+            transform: translate(0, -50%);
+            .mobile-menu__logo{
+                width: 64px;
+                height: 69px;
+                margin-bottom: 80px;
+            }
+            a{
+                margin-bottom: 45px;
+            }
+            .social-media{
+                width: 152px;
+                margin-top: 71px;
+            }
         }
-        
-        .burger span:nth-of-type(3) {
-            top: calc(47% + 6px);
-        }
-        
-        .burger.active span:first-of-type {
-            transform: translateX(-100%);
-            opacity: 0;
-        }
-        
-        .burger.active span:nth-of-type(2) {
-            top: 47%;
-            transform: rotate(405deg);
-        }
-        
-        .burger.active span:nth-of-type(3) {
-            top: 47%;
-            transform: rotate(-405deg);
+    }
+
+    .mobail-menu--active {
+        transform: translateX(0px);
+        transition-duration: all ease-in-out 10px;
+    }
+}
+
+@media(max-width: 768px) {
+    #header {
+        padding: 16px 0px;
+        .menu {
+            display: none !important;
         }
     }
 }
