modal page and main page

--- a/src/css/components/fonts/_lato.scss
+++ b/src/css/components/fonts/_lato.scss
@@ -5,3 +5,8 @@
          url("../../../assets/fonts/Lato-Semibold.ttf") format("truetype");
     font-style: normal;
 }
+@font-face {
+    font-family: "Lato italic";
+    src: url("../../../assets/fonts/Lato-Italic.ttf") format("truetype");
+    font-style: italic;
+}
