--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,6 @@
 @import './components/header.scss';
-@import './components/cube.scss';
+@import './components/home.scss';
 @import './components/common.scss';
+@import './components/footer.scss';
+@import './components//modalPage.scss';
 @import './components/fonts/_lato.scss';
