--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,4 +12,5 @@ head
     include includes/header
     block content
 
+    include includes/footer
     script(type="module", src="../js/main.js")
