--- a/src/css/components/common.scss
+++ b/src/css/components/common.scss
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    a{
+        text-decoration: none;
+    }
 }
 
 .prime__button {
@@ -17,4 +20,8 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    transition: 0.2s;
+    &:hover{
+        background: #30B01E;
+    }
 }
