--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -1,19 +1,22 @@
 #header {
     padding: 21px 0px 20px 0px;
-    .menu,.mobail-menu__inner {
+    box-shadow:(0px 2px 8px rgba(50, 59, 80, 0.05));
+    .menu,
+    .mobail-menu__inner {
         a {
             text-decoration: none;
             font-family: 'Lato';
             font-weight: 500;
 
 
-            
+
             font-size: 14px;
             line-height: 17px;
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: #282C37;
         }
+
         .menu__link--active {
             font-weight: 700;
         }
@@ -21,7 +24,7 @@
         .social-media {
             width: 110px;
 
-            a {
+            a svg path{
                 transition: 0.2s;
             }
 
@@ -103,28 +106,33 @@
         transform: translate(300%);
         background-color: #FFFFFF;
         transition: all ease 0.5s;
-        .mobail-menu__close{
+
+        .mobail-menu__close {
             margin-top: 24px;
             width: 24px;
         }
+
         .mobail-menu__inner {
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: absolute;               
-            top: 50%;   
+            position: absolute;
+            top: 50%;
             left: 0px;
-            right: 0px;                      
+            right: 0px;
             transform: translate(0, -50%);
-            .mobile-menu__logo{
+
+            .mobile-menu__logo {
                 width: 64px;
                 height: 69px;
                 margin-bottom: 80px;
             }
-            a{
+
+            a {
                 margin-bottom: 45px;
             }
-            .social-media{
+
+            .social-media {
                 width: 152px;
                 margin-top: 71px;
             }
@@ -137,9 +145,9 @@
     }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 769px) {
     #header {
-        padding: 16px 0px;
+        padding: 21px 0px;
         .menu {
             display: none !important;
         }
