--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -16,10 +16,10 @@ mixin links
   
 
 section#header
-  .container
+  .container-lg
     div.d-flex.justify-content-between.align-items-center
-      .logo
-        img(src="./assets/img/icons/logo.svg", alt="")
+      a.logo(href="./main.html")
+        img(src="./assets/img/icons/logo.svg", alt="logo")
       nav.menu.d-flex.justify-content-between.col-8.align-items-center
         +links
       button.burger.d-md-none
@@ -28,8 +28,7 @@ section#header
         span
       .mobail-menu.d-md-none
         .container
-          svg.mobail-menu__close(width='28', height='28', viewbox='0 0 28 28', fill='none', xmlns='http://www.w3.org/2000/svg')
-            path(d='M2 26L26 2M2 2L26 26', stroke='#282C37', stroke-width='2.5', stroke-linecap='round', stroke-linejoin='round')
+          img.mobail-menu__close(src="../../assets/img/icons/close.svg")
           .mobail-menu__inner
             img.mobile-menu__logo(src="./assets/img/icons/logo2.svg", alt="")
             +links 
