--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,8 +1,8 @@
-extends ../index.pug
+extends ../sample.pug
 
 block content
     section#cube
-        .container-lg
+        .container
             .cube__inner.d-flex.justify-content-between
                 .cube__inform
                     h2.cube__title Создаем решения
@@ -11,36 +11,33 @@ block content
                     button#open-modal.prime__button Обсудить проблему
                 img.cube__img(src="../assets/img/cube.png", alt="cube")
     .articles
-        .container-lg
-            .row
-                .col-1
-                .articles__card.col-10.d-flex.justify-content-between.flex-wrap
-                    .articles__item.col-4.d-flex
-                        .col-3
-                            img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
-                        .col-9
-                            a(href="#") 
-                            a(href="#").article-text Как найти точки роста и определить цели?   
-                    .col-2
-                    .articles__item.col-4.d-flex
-                        .col-3
-                            img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
-                        .col-9
-                            a(href="#").article-text Как избежать проблем на старте нового бизнеса?
-                    .articles__item.col-4.d-flex
-                        .col-3
-                            img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
-                        .col-9
-                            a(href="#").article-text Как увеличить прибыль, управляя ценами?
-                    .col-2
-                    .articles__item.col-4.d-flex
-                        .col-3
-                            img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
-                        .col-9
-                            a(href="#").article-text Как не попасть в "черную дыру" затрат на продвижение?
-                .col-1
+        .container
+            .articles__card.col-10.d-flex.justify-content-between.flex-wrap
+                .articles__item.col-4.d-flex
+                    .col-3
+                        img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
+                    .col-9
+                        a(href="#") 
+                        a(href="#").article-text Как найти точки роста и определить цели?   
+                .col-2
+                .articles__item.col-4.d-flex
+                    .col-3
+                        img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
+                    .col-9
+                        a(href="#").article-text Как избежать проблем на старте нового бизнеса?
+                .articles__item.col-4.d-flex
+                    .col-3
+                        img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
+                    .col-9
+                        a(href="#").article-text Как увеличить прибыль, управляя ценами?
+                .col-2
+                .articles__item.col-4.d-flex
+                    .col-3
+                        img.article-logo(src="../../assets/img/icons/logo2.svg", alt="logo")
+                    .col-9
+                        a(href="#").article-text Как не попасть в "черную дыру" затрат на продвижение?
     section#services
-        .container-lg
+        .container
             .services__inner
                 h2.services__title услуги
             .services__cards.d-flex
@@ -72,11 +69,12 @@ block content
                     h2.modal-page__title Оставьте заявку
                     div
                         input.name(type='text', placeholder='Ваше имя', name='name')
-                        p.warning-name-error
+                        p.warning-name-error 
                     div
                         input.email(type='email', placeholder='Email', name='email')
-                        p.warning-email-error
-                    div 
+                        p.warning-email-error 
+                    .textArea-input
                         textarea.big-text(type='text', placeholder='Пожалуйста опишите вашу проблему', name='big-text')
-                        p.warning-big-text-error
+                        p.warning-big-text-error 
                     input.prime__button.form__button-submit(type='submit' value="отправить")
+                    p.successfully.d-none Ваша заявка успешно отправлена!
