--- a/src/css/components/common.scss
+++ b/src/css/components/common.scss
@@ -5,10 +5,13 @@
     a{
         text-decoration: none;
     }
+    p{
+        margin: 0px;
+    }
 }
 
 .prime__button {
-    padding: 14px 32px 14px 32px;
+    padding: 14px 31px 14px 32px;
     background: #47CF34;
     border: 1px solid #47CF34;
     border-radius: 8px;
