--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,5 @@
 @import './components/header.scss';
-@import './components/home.scss';
+@import './components/index.scss';
 @import './components/common.scss';
 @import './components/footer.scss';
 @import './components//modalPage.scss';
