--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,5 +1,5 @@
 .footer
-    .container-lg
+    .container
         .d-flex.justify-content-between.align-items-center
             p Все права защищены ©
             .social-media.d-flex.justify-content-between
