--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,5 +1,5 @@
 mixin links
-  a.menu__link(href="./main.html") Консультации
+  a.menu__link(href="./index.html") Консультации
   a.menu__link(href="./services.html") Услуги
   a.menu__link(href="./training.html") Треннинги
   a(href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank") Блог
@@ -16,9 +16,9 @@ mixin links
   
 
 section#header
-  .container-lg
+  .container
     div.d-flex.justify-content-between.align-items-center
-      a.logo(href="./main.html")
+      a.logo(href="./index.html")
         img(src="./assets/img/icons/logo.svg", alt="logo")
       nav.menu.d-flex.justify-content-between.col-8.align-items-center
         +links
