--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -16,7 +16,7 @@ mixin links
   
 
 section#header
-  .container
+  .container-md
     div.d-flex.justify-content-between.align-items-center
       a.logo(href="./index.html")
         img(src="./assets/img/icons/logo.svg", alt="logo")
